--- a/src/components/Toast.css
+++ b/src/components/Toast.css
@@ -1,4 +1,61 @@
-.toast {
+.toast-container-react-flare-toast {
+  position: fixed !important;
+  top: 10px !important;
+  right: 10px !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: flex-end !important;
+  width: fit-content !important;
+  z-index: 10000000 !important;
+}
+
+/* toast positioning  */
+.toast-container-react-flare-toast.top {
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  flex-direction: column;
+  align-items: center !important;
+}
+.toast-container-react-flare-toast.top-right {
+  top: 10px;
+  right: 10px;
+  flex-direction: column;
+}
+.toast-container-react-flare-toast.top-left {
+  top: 10px;
+  left: 10px;
+  align-items: flex-start !important;
+  flex-direction: column;
+}
+.toast-container-react-flare-toast.bottom {
+  top: unset;
+  right: unset;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  flex-direction: column-reverse;
+  align-items: center !important;
+}
+.toast-container-react-flare-toast.bottom-right {
+  top: unset;
+  right: unset;
+  bottom: 10px;
+  right: 10px;
+  flex-direction: column-reverse;
+}
+.toast-container-react-flare-toast.bottom-left {
+  top: unset;
+  right: unset;
+  bottom: 10px;
+  left: 10px;
+  align-items: flex-start !important;
+  flex-direction: column-reverse;
+}
+
+/* toast positioning  */
+
+.toast-container-react-flare-toast > .toast {
   outline: none;
   padding: 10px;
   margin: 5px 0px;
@@ -8,84 +65,29 @@
   gap: 5px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  width: fit-content;
 }
-.success {
+.toast-container-react-flare-toast > .toast.success {
   background-color: #28a745;
 }
-.info {
+.toast-container-react-flare-toast > .toast.info {
   background-color: #17a2b8;
 }
-.warning {
+.toast-container-react-flare-toast > .toast.warning {
   background-color: #ffc107;
 }
-.error {
+.toast-container-react-flare-toast > .toast.error {
   background-color: #dc3545;
 }
 
-.icon {
+.toast-container-react-flare-toast > .toast > .icon {
   width: 1.2em; /* Adjust as needed */
   height: 1.2em; /* Adjust as needed */
   vertical-align: middle;
   color: currentColor; /* Ensure the color matches your theme */
 }
 
-/* toast positioning  */
-
-.toast-container {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  width: fit-content;
-}
-.top {
-  top: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  flex-direction: column;
-  align-items: center !important;
-}
-.top-right {
-  top: 10px;
-  right: 10px;
-  flex-direction: column;
-}
-.top-left {
-  top: 10px;
-  left: 10px;
-  align-items: flex-start !important;
-  flex-direction: column;
-}
-.bottom {
-  top: unset;
-  right: unset;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  flex-direction: column-reverse;
-  align-items: center !important;
-}
-.bottom-right {
-  top: unset;
-  right: unset;
-  bottom: 10px;
-  right: 10px;
-  flex-direction: column-reverse;
-}
-.bottom-left {
-  top: unset;
-  right: unset;
-  bottom: 10px;
-  left: 10px;
-  align-items: flex-start !important;
-  flex-direction: column-reverse;
-}
-
-/* toast positioning  */
-
-.closeBtn {
+.toast-container-react-flare-toast > .toast > .closeBtn {
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -125,15 +127,15 @@
   }
 }
 
-.fadeIn {
+.toast-container-react-flare-toast > .toast.fadeIn {
   animation: fadeIn 0.5s ease-in;
 }
 
-.popUp {
+.toast-container-react-flare-toast > .toast.popUp {
   animation: popUp 0.5s ease-out;
 }
 
-.slideIn {
+.toast-container-react-flare-toast > .toast.slideIn {
   animation: slideIn 0.5s ease-out;
 }
 
